# Android-TV-Remote-Controller-Qt

./: .gitignore  Android-TV-Remote-Controller-Qt.pro  README.md
.circleci/: config.yml
tv-remote-controller/: Button.qml  CMakeLists.txt  CodeInput.qml  DevicesListView.qml  DevicesPage.qml  KeysPage.qml  Style.qml  datamodel.h  devicemodel.cpp  devicemodel.h  keycodesenum.h  keycommandsender.cpp  keycommandsender.h  main.cpp  main.qml  messagehandler.cpp  messagehandler.h  pairinghandler.cpp  pairinghandler.h  qml.qrc  remotecontrolcore.cpp  remotecontrolcore.h  settingshandler.cpp  settingshandler.h  socketutils.h  tv-remote-controller.pro  upnpdiscovery.cpp  upnpdiscovery.h
tv-remote-controller-gui-test-case/: CMakeLists.txt  tst_guitest.cpp  tst_testcase.qml  tv-remote-controller-gui-test-case.pro
tv-remote-controller-test-case/: CMakeLists.txt  devicemodeltestcase.cpp  devicemodeltestcase.h  messagehandlertestcase.cpp  messagehandlertestcase.h  settingshandlertestcase.cpp  settingshandlertestcase.h  tst_testcase.cpp  tv-remote-controller-test-case.pro
